# open-problem-atlas

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-CODE  README.md  SECURITY.md  dataset_card.md  plan.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: add-ai-attempt.yml  add-problem.yml  add-source.yml  config.yml  propose-lead.yml  report-status-change.yml
.github/workflows/: build-site.yml  lint-data.yml  (+4 more)
analysis/: README.md  paper-statistics.json
docs/: architecture.md  attempt-policy.md  benchmark-protocol.md  manifesto.md  review-guidelines.md  source-policy.md  status-change-policy.md  taxonomy.md
ingestion/: cache.py
notebooks/: 01_explore_atlas.ipynb  02_collatz_computational_search.ipynb  03_goldbach_verification.ipynb  04_ingestion_demo.ipynb  05_data_quality_audit.ipynb
paper/: .gitignore  main.tex  references.bib
review/: queue.py
runner/: __init__.py  __main__.py  attempt_recorder.py  cli.py  config.py  contract.py  verdict.py
schema/: attempt.schema.json  collection.schema.json  problem.schema.json  source.schema.json  verifier-contract.schema.json
scripts/: fix_source_kind_misclassification.py  generate_bench.py  generate_bulk_leads.py  generate_contracts.py  generate_lean4_stubs.py  generate_paper_stats.py  generate_snapshot.py  promote_leads.py  publish_huggingface.py  setup_labels.sh
tests/: test_checkers.py  test_contracts_coverage.py  test_extraction.py  test_opa_package.py  test_schema_validation.py
(+6578 files in other folders)
